fixed whitespace spelling, added new section on hashes (not complete), added some new theming for 'codeWords'

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,6 @@
 $orange: #EF700D;
 $darkGrey: #424242;
 $lightGrey: #c4c4c4;
+$offWhite: #f2f2f2;
 $black: #000;
+$maroon: #680026
