--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -47,11 +47,17 @@ code {
   font-style: italic;
 }
 
+.codeWord {
+  font-family: monospace;
+  background-color: $offWhite;
+  color: $maroon;
+}
+
 .subtext {
   color: $darkGrey;
   font-size: 0.8rem;
 }
 
 .formattedCode {
-  text-align: initial;
+  text-align: left;
 }
